--- a/src/app/feature/location/new-location/new-location.component.html
+++ b/src/app/feature/location/new-location/new-location.component.html
@@ -1,4 +1,4 @@
-<p-table [value]="newLocation" styleClass="p-datatable-striped" responsiveLayout="scroll">
+<!--p-table [value]="newLocation" styleClass="p-datatable-striped" responsiveLayout="scroll">
   <ng-template pTemplate="header">
     <tr>
       <th>Name</th>
@@ -15,4 +15,7 @@
       <td>{{location.address}}</td>
     </tr>
   </ng-template>
-</p-table>
+</p-table-->
+
+
+<app-byx-table [tableConf]="tableConf"></app-byx-table>
