--- a/src/app/feature/location/new-location-dialog/new-location-dialog.component.html
+++ b/src/app/feature/location/new-location-dialog/new-location-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="formContainer"> 
+<div class="formContainer">
   <span class="p-float-label">
     <input id="float-input-name" type="text" pInputText [(ngModel)]="row.name">
     <label for="float-input-name">Name</label>
@@ -15,14 +15,20 @@
   </span>
 
   <span class="p-float-label">
-    <p-inputNumber id="float-input-latitude" mode="decimal" [minFractionDigits]="2" [(ngModel)]="row.geometry.coordinates![1]"></p-inputNumber>
+    <p-inputNumber id="float-input-latitude" mode="decimal" [minFractionDigits]="2"
+      [(ngModel)]="row.geometry.coordinates![1]"></p-inputNumber>
     <label for="float-input-latitude">Latitude</label>
   </span>
 
   <span class="p-float-label">
-    <p-inputNumber id="float-input-longitude" mode="decimal" [minFractionDigits]="2" [(ngModel)]="row.geometry.coordinates![0]"></p-inputNumber>
+    <p-inputNumber id="float-input-longitude" mode="decimal" [minFractionDigits]="2"
+      [(ngModel)]="row.geometry.coordinates![0]"></p-inputNumber>
     <label for="float-input-longitude">Longitude</label>
   </span>
 
+  <p-multiSelect [options]="this.locationService.locationCategory" [(ngModel)]="row.locationCategory"
+    optionLabel="name"></p-multiSelect>
 
+
+  <p-button label="Complete" (click)="complete()"></p-button>
 </div>
