--- a/src/app/core/byx-table/byx-table.component.html
+++ b/src/app/core/byx-table/byx-table.component.html
@@ -1,32 +1,25 @@
-  <p-table 
-  [dataKey]="tableConf.id"
-  [rowsPerPageOptions]="[50]"
-  [showCurrentPageReport]="true"
-  [rows]="50"
-  [paginator]="true" 
-  [value]="tableConf.data"
-  selectionMode="single">
-      <ng-template pTemplate="header">
-          <tr>
-            <th *ngFor="let column of tableConf.columns" 
-                [pSortableColumn]="column.field">
-                <div class="flex justify-content-center align-items-center">
+<p-table [dataKey]="tableConf.id" [rowsPerPageOptions]="[50]" [showCurrentPageReport]="true" [rows]="50"
+  [paginator]="true" [value]="tableConf.data" selectionMode="single">
+  <ng-template pTemplate="header">
+    <tr>
+      <th *ngFor="let column of tableConf.columns" [pSortableColumn]="column.field">
+        <div class="flex justify-content-center align-items-center">
 
-                  <p-sortIcon [field]="column.field">
-                  </p-sortIcon>
-                  {{column.header}}
-                  <p-columnFilter type="text" [field]="column.field" display="menu"></p-columnFilter>
-                </div>
-            </th>
-          </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-row >
-          <tr (dblclick)="tableConf.rowDbClick?.(tableConf,row)">
-            <td *ngFor="let column of tableConf.columns" >
-              <span *ngVar="getValue(row, column.field) as value">
-                 {{value}}
-              </span>
-            </td>
-          </tr>
-      </ng-template>
-  </p-table>
+          {{column.header ?? column.field}}
+          <p-sortIcon [field]="column.field">
+          </p-sortIcon>
+          <p-columnFilter type="text" [field]="column.field" display="menu"></p-columnFilter>
+        </div>
+      </th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-row>
+    <tr (dblclick)="tableConf.rowDbClick?.(tableConf,row)">
+      <td *ngFor="let column of tableConf.columns">
+        <span *ngVar="getValue(row, column.field) as value">
+          {{value}}
+        </span>
+      </td>
+    </tr>
+  </ng-template>
+</p-table>
