--- a/src/app/feature/dashboard/dashboard.component.html
+++ b/src/app/feature/dashboard/dashboard.component.html
@@ -1,4 +1,1 @@
-<a routerLink="/location" >dashboard works!</a>
-
-
-<div [routerLink]="'/location/new-location'">aaa</div>
+<a routerLink="/location">/location</a>
